--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
     "name": "mindef/demo",
-    "description": "Proyecto MVC demo",
+    "description": "Proyecto MVC-02-2024",
     "type": "project",
     "config": {
-        "platform-check": false
+        "platform-check": false,
+        "platform": {
+            "php":"7.4.21"
+        }
     },
     "autoload": {
         "psr-4": {
